--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@
   padding: 0;
 }
 
-body {
+html, body {
   width: 100%;
+  height: 100%;
   font-size: 16px;
 }
 
@@ -53,20 +54,23 @@ header {
   background-color: var(--dark-violet);
   color: var(--font-color);
   text-align: center;
-  /*height: 900px;*/
+  position: relative;
 }
 
-header img {
+.family-intro {
+  background-image: url(./images/image-intro-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   width: 100%;
-  height: auto;
+  height: 451px;
 }
 
 .information {
   padding: 1rem;
-  background-image: url(./images//bg-pattern-intro-left-mobile.svg),
-    url(./images/bg-pattern-intro-right-mobile.svg);
+  background-image: url(./images//bg-pattern-intro-left-mobile.svg);
   background-repeat: no-repeat;
-  background-position: top left, bottom right;
+  background-position: top left;
 }
 
 .information h1 {
@@ -82,13 +86,23 @@ header img {
 }
 
 .information button {
-  margin: 2rem 0 14rem;
+  margin: 2rem 0 5rem;
   width: 144px;
   height: 36px;
   letter-spacing: 0.1rem;
   background-color: transparent;
   color: var(--font-color);
   border: 1px solid white;
+}
+
+.intro__backgrounds {
+  background-image: url(./images/bg-pattern-intro-right-mobile.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 85%;
 }
 
 /*--------section---------*/
@@ -174,24 +188,25 @@ footer {
 }
 
 .social-media img {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
-.social-media a img{
-    margin: 1.5rem 0.2rem 2.5rem;
+.social-media a img {
+  margin: 1.5rem 0.2rem 2.5rem;
 }
 
-footer h3, p{
-    text-align: center;
-    font-family: var(--font-karla);
+footer h3,
+p {
+  text-align: center;
+  font-family: var(--font-karla);
 }
 
 footer h3 {
-    margin: 2rem;
-    color: var(--dark-grayish-violet);
+  margin: 2rem;
+  color: var(--dark-grayish-violet);
 }
 
 footer p {
-    margin: 0.6rem;
-    font-weight: 600;
+  margin: 0.6rem;
+  font-weight: 600;
 }
