--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   font-size: 16px;
@@ -36,17 +37,41 @@ nav {
   margin: 1rem 1.5rem;
 }
 
-ul {
-  display: none;
+.menu-img {
+  background-image: url(./images/icon-hamburger.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  width: 100%;
+  height: 32px;
+}
+
+.active {
+  position: absolute;
+  display: block;
+  text-align: center;
+  z-index: 1;
+  margin: 0 -1.5rem 0;
+  width: calc(100%);
+  list-style-type: none;
+  top: 4rem;
+  padding: 1.5rem 0;
+  height: calc(100% - 6.5rem);
+  background-color: var(--very-dark-violet);
+  background-image: url(./images/bg-pattern-mobile-nav.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 ul li {
-  text-decoration: none;
-  list-style: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding: 1rem 0;
+  font-family: var(--font-karla);
 }
 
 ul li a {
-  display: none;
+  text-decoration: none;
+  color: var(--font-color);
 }
 
 /*--------header---------*/
@@ -54,7 +79,6 @@ header {
   background-color: var(--dark-violet);
   color: var(--font-color);
   text-align: center;
-  position: relative;
 }
 
 .family-intro {
@@ -102,7 +126,7 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 85%;
+  top: 100%;
 }
 
 /*--------section---------*/
