--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav {
 
 .active {
   position: absolute;
-  display: block;
+  display: none;
   text-align: center;
   z-index: 1;
   margin: 0 -1.5rem 0;
