--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ nav {
   background-image: url(./images/icon-hamburger.svg);
   background-repeat: no-repeat;
   background-position: right;
-  width: 100%;
+  width: 32px;
   height: 32px;
 }
 
 .active {
   position: absolute;
-  display: none;
+  display: block;
   text-align: center;
   z-index: 1;
   margin: 0 -1.5rem 0;
@@ -67,6 +67,19 @@ ul li {
   font-size: 20px;
   padding: 1rem 0;
   font-family: var(--font-karla);
+  height: calc(55px - 32px);
+}
+
+/*ul li:hover {
+  border: 1px solid white;
+  margin: 0 20px;
+  padding: calc(1rem - 1px) 0;
+}*/
+
+.liHover {
+  border: 1px solid white;
+  margin: 0 20px;
+  padding: calc(1rem - 1px) 0;
 }
 
 ul li a {
