--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav {
 
 .active {
   position: absolute;
-  display: block;
+  display: none;
   text-align: center;
   z-index: 1;
   margin: 0 -1.5rem 0;
@@ -92,6 +92,7 @@ header {
   background-color: var(--dark-violet);
   color: var(--font-color);
   text-align: center;
+  position: relative;
 }
 
 .family-intro {
@@ -139,7 +140,7 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 100%;
+  top: 80%;
 }
 
 /*--------section---------*/
@@ -233,7 +234,7 @@ footer {
 }
 
 footer h3,
-p {
+footer p {
   text-align: center;
   font-family: var(--font-karla);
 }
@@ -246,4 +247,111 @@ footer h3 {
 footer p {
   margin: 0.6rem;
   font-weight: 600;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (min-width: 376px) and (max-width: 768px) {
+  .family-intro {
+    background-image: url(./images/image-intro-desktop.jpg);
+    width: 100%;
+    height: 650px;
+  }
+  .active {
+    background-image: url(./images/bg-pattern-mobile-nav.svg);
+    background-size: 100%;
+  }
+  header {
+    position: relative;
+  }
+  .intro__backgrounds {
+    position: absolute;
+    top: 80%;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  /*-------nav-------*/
+  nav {
+    flex-direction: row;
+  }
+
+  .menu-img {
+    display: none;
+  }
+
+  .active {
+    position: relative;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: auto;
+    background-color: transparent;
+    background-image: none;
+    top: 0;
+  }
+
+  ul li {
+    padding: 0 1rem;
+  }
+
+  ul li a {
+    color: var(--dark-grayish-violet);
+  }
+
+  /*-------header-------*/
+  header {
+    background-color: var(--dark-violet);
+    color: var(--font-color);
+    text-align: left;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    background-image: url(./images//bg-pattern-intro-right-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 35%;
+  }
+
+  .family-intro {
+    background-image: url(./images/image-intro-desktop.jpg);
+    width: 36%;
+    height: 341px;
+    position: absolute;
+    top: 40%;
+    right: 5%;
+  }
+
+  .information {
+    padding: 1rem 4rem;
+    margin-left: 3rem;
+    background-image: none;
+    width: 40%;
+  }
+
+  .information h1 {
+    padding: 4rem 0 1rem;
+  }
+
+  .intro__backgrounds {
+    background-image: url(./images/bg-pattern-intro-left-desktop.svg);
+    background-position: left;
+    background-size: 15%;
+    position: absolute;
+    height: 640px;
+    top: 50%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
 }
