--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ nav {
 }
 
 .menu-img {
-  background-image: url(./images/icon-hamburger.svg);
+  background-image: url(/images/icon-hamburger.svg);
   background-repeat: no-repeat;
   background-position: right;
   width: 32px;
@@ -57,7 +57,7 @@ nav {
   padding: 1.5rem 0;
   height: calc(100% - 6.5rem);
   background-color: var(--very-dark-violet);
-  background-image: url(./images/bg-pattern-mobile-nav.svg);
+  background-image: url(/images/bg-pattern-mobile-nav.svg);
   background-repeat: no-repeat;
   background-position: bottom;
 }
@@ -96,7 +96,7 @@ header {
 }
 
 .family-intro {
-  background-image: url(./images/image-intro-mobile.jpg);
+  background-image: url(/images/image-intro-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -106,7 +106,7 @@ header {
 
 .information {
   padding: 1rem;
-  background-image: url(./images//bg-pattern-intro-left-mobile.svg);
+  background-image: url(/images//bg-pattern-intro-left-mobile.svg);
   background-repeat: no-repeat;
   background-position: top left;
 }
@@ -134,7 +134,7 @@ header {
 }
 
 .intro__backgrounds {
-  background-image: url(./images/bg-pattern-intro-right-mobile.svg);
+  background-image: url(/images/bg-pattern-intro-right-mobile.svg);
   background-repeat: no-repeat;
   background-position: top right;
   position: absolute;
@@ -186,7 +186,7 @@ section h1 {
   width: 90%;
   margin: 0 auto;
   text-align: center;
-  background-image: url(./images/bg-pattern-how-we-work-mobile.svg);
+  background-image: url(/images/bg-pattern-how-we-work-mobile.svg);
   background-repeat: no-repeat;
   background-position: top right;
 }
@@ -212,7 +212,7 @@ section h1 {
 footer {
   margin-top: 6rem;
   background-color: var(--very-light-gray);
-  background-image: url(./images/bg-pattern-footer-mobile.svg);
+  background-image: url(/images/bg-pattern-footer-mobile.svg);
   background-repeat: no-repeat;
 }
 
@@ -252,12 +252,12 @@ footer p {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (min-width: 376px) and (max-width: 768px) {
   .family-intro {
-    background-image: url(./images/image-intro-desktop.jpg);
+    background-image: url(/images/image-intro-desktop.jpg);
     width: 100%;
     height: 650px;
   }
   .active {
-    background-image: url(./images/bg-pattern-mobile-nav.svg);
+    background-image: url(/images/bg-pattern-mobile-nav.svg);
     background-size: 100%;
   }
   header {
@@ -308,14 +308,14 @@ footer p {
     position: relative;
     display: flex;
     flex-direction: row;
-    background-image: url(./images//bg-pattern-intro-right-desktop.svg);
+    background-image: url(/images//bg-pattern-intro-right-desktop.svg);
     background-repeat: no-repeat;
     background-position: top right;
     background-size: 35%;
   }
 
   .family-intro {
-    background-image: url(./images/image-intro-desktop.jpg);
+    background-image: url(/images/image-intro-desktop.jpg);
     width: 36%;
     height: 341px;
     position: absolute;
@@ -335,7 +335,7 @@ footer p {
   }
 
   .intro__backgrounds {
-    background-image: url(./images/bg-pattern-intro-left-desktop.svg);
+    background-image: url(/images/bg-pattern-intro-left-desktop.svg);
     background-position: left;
     background-size: 15%;
     position: absolute;
