--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,8 @@ footer p {
   .family-intro {
     background-image: url(/images/image-intro-desktop.jpg);
     width: 100%;
-    height: 650px;
+    position: relative;
+    height: 521px;
   }
   .active {
     background-image: url(/images/bg-pattern-mobile-nav.svg);
@@ -282,7 +283,7 @@ footer p {
 
   .active {
     position: relative;
-    display: flex;
+    display: flex !important;
     margin: 0;
     padding: 0;
     height: auto;
@@ -315,11 +316,10 @@ footer p {
   }
 
   .family-intro {
-    background-image: url(/images/image-intro-desktop.jpg);
-    width: 36%;
-    height: 341px;
-    position: absolute;
-    top: 40%;
+    background-image: none; /*url(/images/image-intro-desktop.jpg);*/
+    width: 30%;
+    height: auto;
+    top: 50%;
     right: 5%;
   }
 
@@ -341,6 +341,12 @@ footer p {
     position: absolute;
     height: 640px;
     top: 50%;
+  }
+
+  /*--------footer---------*/
+  .footer-span {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
