--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,10 @@ header {
   padding: 4rem 0 1rem;
 }
 
+.information hr {
+  display: none;
+}
+
 .information p {
   font-family: var(--font-karla);
   line-height: 1.5rem;
@@ -194,7 +198,7 @@ section h1 {
 .ad h2 {
   padding: 3rem 1rem 1rem;
   font-family: var(--font-serif);
-  font-weight: 340;
+  font-weight: 300;
   font-size: 2.5rem;
 }
 
@@ -268,10 +272,15 @@ footer p {
     position: absolute;
     top: 80%;
   }
+  /*--------footer---------*/
+  footer {
+    background-image: url(/images/bg-pattern-footer-desktop.svg);
+    background-size: 90%;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+@media only screen and (min-width: 768px) /*and (max-width: 992px) */ {
   /*-------nav-------*/
   nav {
     flex-direction: row;
@@ -317,10 +326,10 @@ footer p {
 
   .family-intro {
     background-image: none; /*url(/images/image-intro-desktop.jpg);*/
-    width: 30%;
+    width: 40%;
     height: auto;
-    top: 50%;
-    right: 5%;
+    top: 20%;
+    right: 2%;
   }
 
   .information {
@@ -331,7 +340,15 @@ footer p {
   }
 
   .information h1 {
-    padding: 4rem 0 1rem;
+    margin: 0rem 0 1rem;
+    padding: 1rem 0 0;
+  }
+
+  .information hr {
+    margin: 3rem 0 1rem;
+    width: 25%;
+    display: block;
+    border-color: var(--dark-grayish-violet);
   }
 
   .intro__backgrounds {
@@ -344,18 +361,128 @@ footer p {
   }
 
   /*--------footer---------*/
+  footer {
+    background-image: url(/images/bg-pattern-footer-desktop.svg);
+  }
+
+  .social-media {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .social-media img {
+    margin: 3rem 0;
+  }
+
+  .social-media a img {
+    margin: 3rem 0.2rem 3rem;
+  }
+
   .footer-span {
     display: flex;
     justify-content: space-between;
+    width: 90%;
+    margin: auto;
   }
-}
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+  footer h3,
+  footer p {
+    text-align: left;
+  }
+
+  footer h3 {
+    margin: 0.6rem 0 1.6rem;
+    color: var(--dark-grayish-violet);
+  }
+
+  footer p {
+    margin: 0.6rem 0;
+    font-weight: 600;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  /*-------header-------*/
+  .family-intro {
+    width: 40%;
+    top: 15%;
+  }
+
+  .information {
+    padding: 1rem 4rem;
+    margin-left: 3rem;
+    background-image: none;
+    width: 40%;
+  }
+
+  .information h1 {
+    margin: 0rem 0 1rem;
+    padding: 1rem 0 0;
+  }
+
+  .information hr {
+    margin: 3rem 0 1rem;
+    width: 25%;
+  }
+
+  .intro__backgrounds {
+    background-image: url(/images/bg-pattern-intro-left-desktop.svg);
+    background-position: left;
+    background-size: 15%;
+    position: absolute;
+    height: 640px;
+    top: 45%;
+  }
+
+  /*--------section---------*/
+  section {
+    margin: 14rem 4rem 0 4rem;
+    text-align: left;
+  }
+
+  section span {
+    display: flex;
+  }
+
+  section hr {
+    width: 15%;
+    margin: 0;
+    margin: 0 1rem;
+  }
+
+  section h1 {
+    font-size: 3.5rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    padding: 0 1rem;
+  }
+
+  .card {
+    margin: 1rem 0;
+    padding: 0 1rem;
+  }
+
+  /*--------advertisment---------*/
+  .ad {
+    text-align: left;
+    background-image: url(/images/bg-pattern-how-we-work-desktop.svg);
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4rem;
+  }
+
+  .ad h2 {
+    padding: 4rem 1rem 4rem 5rem;
+    width: 40%;
+  }
+
+  .ad button {
+    margin: 2rem 5rem 2rem 0;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
